# oatpp_application

./: CMakeLists.txt
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: AntennaApiController.hpp  CustomApiController.cpp  CustomApiController.hpp  CustomHandler.cpp  CustomHandler.hpp  VesselApiController.hpp
src/dto/: AntennaDto.hpp  DTOs.hpp  GnssPositionDto.hpp  PlayerDto.hpp  VesselDto.hpp
